answer/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - 'frontend.test.com'
      - 'backend.test.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gw-frontend
spec:
  hosts:
  - "frontend.test.com"
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: frontend.default.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gw-backend
spec:
  hosts:
  - "backend.test.com"
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: backend.default.svc.cluster.local
        port:
          number: 80
